# sql-server-rca-assistant

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
sim/: .env.example  README.md  TECH_SPEC.md  __init__.py  __main__.py  cli.py  config.py  config.yaml  container_manager.py  db_connection.py  exceptions.py  logging_config.py  py.typed  pyproject.toml  requirements-dev.txt  requirements.txt
sim/assets/: .gitkeep
sim/docker/: README.md  docker-compose.yaml
sim/docker/clickhouse/init/: 01_schema.sql
sim/docker/collectors/dmv/: Dockerfile  requirements.txt  run_blitz.py
sim/docker/collectors/dmv/src/: __init__.py  blitz_executor.py  clickhouse_writer.py  collector.py  config.py  dmv_queries.py  main.py
sim/docker/grafana/dashboards/: query-performance.json  sql-server-overview.json  wait-stats.json
sim/docker/grafana/provisioning/dashboards/: default.yaml
sim/docker/grafana/provisioning/datasources/: clickhouse.yaml
sim/docker/otel/: otel-collector-config.yaml
sim/rca/: README.md  __init__.py  analyze_failures.py  cli.py  config.py  feature_schema.py
sim/rca/datasources/: __init__.py  clickhouse_source.py
sim/rca/engine/: README.md  __init__.py  agent_engine.py  unified_prompt.py
sim/rca/llm/: README.md  __init__.py  anthropic_client.py  base.py  factory.py
sim/rca/tools/: README.md  __init__.py  base.py  blitz_tools.py  clickhouse_tools.py  code_analysis_tools.py  grafana_tools.py  health_tools.py  plan_tools.py  registry.py  sql_tools.py
sim/sql/blitz/: install.sql
sim/tests/: README.md  __init__.py  conftest.py  test_config.py  test_container_manager.py  test_exceptions.py  test_logging.py
sim/tests/integration/: __init__.py
sim/tests/test_rca/: __init__.py  test_health_tools.py
sim/tests/test_webapp/: test_session_manager.py  test_session_storage_sqlite.py
sim/webapp/: README.md  __init__.py
sim/webapp/backend/: __init__.py  main.py  requirements.txt  session_manager.py  session_models.py  session_store.py  session_store_file.py  session_store_sqlite.py
sim/webapp/backend/api/: __init__.py  chat.py  grafana.py  session.py
sim/webapp/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
sim/webapp/frontend/app/: globals.css  layout.tsx  page.tsx
sim/webapp/frontend/app/dashboard/: page.tsx
sim/webapp/frontend/components/: AnalysisResult.tsx  ChatMessage.tsx  MessageInput.tsx  Sidebar.tsx  ThinkingBlock.tsx  ToolCall.tsx  index.ts
sim/webapp/frontend/components/chat/: ChatHeader.tsx  HistoryPane.tsx  index.ts  types.ts
sim/webapp/frontend/components/dashboard/: ChartGenerator.tsx  GrafanaEmbed.tsx  LazyGrafanaEmbed.tsx  index.ts
sim/webapp/frontend/hooks/: use-chat-session.ts
sim/webapp/frontend/lib/: api.ts  iframe-registry.ts
